@@ -1,3 +1,9 @@
+2003-05-14  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclEnv.c (TclUnsetEnv): Another putenv() copy behavior
+	problem repaired when compiling on windows and using microsoft's
+	runtime. [Bug 736421] (gravereaux)
+
 2003-05-13  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclIOUtil.c: add decl for FsThrExitProc to suppress
